Merge of branch 1.4.4