@@ -1,12 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<name>Flexo Enterprise Packaging</name>
+	<name>Executable :: Flexo Maintainer Packaging</name>
 	<parent>
 		<groupId>org.openflexo.packaging</groupId>
 		<artifactId>exec</artifactId>
 		<version>1.5-SNAPSHOT</version>
 	</parent>
+	<properties>
+        <userType>developer_release</userType>
+        <vm.args>-Xmx1G -XX:MaxPermSize=256M</vm.args>
+    </properties>
 	<artifactId>flexomaintainer</artifactId>
 	<dependencies>
 		<dependency>
